# DogeMarkets

./: generate_VS2012_x64.bat
src/: CMakeLists.txt  application.rc  exchangequery.cpp  exchangequery.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markettypes.h  recentorderswidget.cpp  recentorderswidget.h  recentorderswidget.ui  resources.qrc  volumegraphwidget.cpp  volumegraphwidget.h
